--- a/templates/Products/products.html
+++ b/templates/Products/products.html
@@ -1,31 +1,27 @@
 {% extends 'layouts/index.html' %}
+{% load static %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'products.css' %}">
+{% endblock %}
 
 {% block content %}
-    <style type="text/css">
-        .products {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            width:80%;
-            margin-left:10%;
-        }
-        .product_block{
-            margin: 20px;
-            transition: all 0.3s;
-        }
-        .product_block:hover {
-            transform: scale(1.1);
-            cursor: pointer;
-        }
-    </style>
+
     <div class="products">
         {% for product in products %}
             <div class="product_block">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
+                        {% if product.image %}
+                            <img class="post_image" src="/media/{{ product.image }}" alt="">
+                        {% else %}
+                            <img class="post_image" src="{% static 'img.png' %}" alt="">
+                        {% endif %}
                         <h5 class="card-title">{{ product.title }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Rate: {{ product.rate }}</h6>
-                        <a href="#" class="card-link">More</a>
+                        {% for hastag in product.hastags %}
+                            <p>{{ hastag.title }}</p>
+                        {% endfor %}
+                        <a href="/products/{{ product.id }}" class="card-link">More</a>
                     </div>
                 </div>
             </div>
