--- a/static/products.css
+++ b/static/products.css
@@ -1,18 +1,38 @@
 .products {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            width:80px;
-            margin-left:10%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 80%;
+    margin-left: 10%;
 }
-.product_block{
-            margin: 20px;
-            transition: all 0.3s;
+
+.product_block {
+    margin: 20px;
+    transition: all 0.3s;
 }
+
 .product_block:hover {
-            transform: scale(1.1);
-            cursor: pointer;
+    transform: scale(1.1);
+    cursor: pointer;
 }
-.post_image{
+
+.product_image {
     width: 100%;
+}
+.pages {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+.page_button{
+    width: 35px;
+    height: 35px;
+    background: #242b2e;
+    border: 1px solid black;
+    color: #fff;
+    transition: all 0.3s;
+    margin: 5px;
+}
+.page_button:hover{
+    transform: scale(1.1);
 }
