--- a/templates/Products/detail.html
+++ b/templates/Products/detail.html
@@ -2,13 +2,13 @@
 
 {% block content %}
     <style type="text/css">
-        .post {
+        .product {
             width: 80%;
             margin-left: 10%;
         }
 
-        .post > img {
-            width: 50%;
+        .product > img {
+            width: 100%;
         }
 
         .dates {
@@ -16,33 +16,38 @@
             justify-content: space-between;
         }
 
-        .comment_block {
+        .review_block {
             padding: 10px;
             margin-bottom: 20px;
             background: #242b2e;
             color: #ffffff;
         }
 
-        .comments_title {
+        .reviews_title {
             font-size: 26px;
             font-weight: bold;
             margin-top: 50px;
         }
     </style>
-    <div class="post">
-        <img src="/media/{{ post.image }}" alt="">
-        <h1>{{ post.title }}</h1>
-        <h5>{{ post.description }}</h5>
+    <div class="product">
+        <img src="/media/{{ product.image }}" alt="">
+        <h1>{{ product.title }}</h1>
+        <h5>{{ product.description }}</h5>
         <div class="dates">
-            <h6>{{ post.created_date }}</h6>
-            <h6>{{ post.modified_date }}</h6>
+            <h6>{{ product.created_date }}</h6>
+            <h6>{{ product.modified_date }}</h6>
         </div>
-        <h6 class="comments_title">Comments:</h6>
-        <div class="comments">
-            {% for comment in comments %}
-                <div class="comment_block">
-                    <h6>{{ comment.text }}</h6>
-                    <p>{{ comment.created_date }}</p>
+        <h6 class="reviews_title">Comments:</h6>
+        <form action="/products/{{ product.id }}/" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" value="Add comment">
+        </form>
+        <div class="reviews">
+            {% for review in reviews %}
+                <div class="review_block">
+                    <h6>{{ review.text }}</h6>
+                    <p>{{ review.created_date }}</p>
                 </div>
             {% endfor %}
         </div>
